--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-ZeldaMonogame.DesktopGL/obj/
-ZeldaMonogame.WindowsDX/obj/
-ZeldaMonogame.Android/obj/ 
-ZeldaMonogame.WindowsUWP/obj/ 
-ZeldaMonogame.Core/obj/ 
-ZeldaMonogame.iOS/obj/ 
-ZeldaMonogame.DesktopGL/bin/
-ZeldaMonogame.WindowsDX/bin/
-ZeldaMonogame.Android/bin/ 
-ZeldaMonogame.WindowsUWP/bin/ 
-ZeldaMonogame.Core/bin/ 
-ZeldaMonogame.iOS/bin/ 
+Code/ZeldaMonogame.DesktopGL/obj/
+Code/ZeldaMonogame.WindowsDX/obj/
+Code/ZeldaMonogame.Android/obj/ 
+Code/ZeldaMonogame.WindowsUWP/obj/ 
+Code/ZeldaMonogame.Core/obj/ 
+Code/ZeldaMonogame.iOS/obj/ 
+Code/ZeldaMonogame.DesktopGL/bin/
+Code/ZeldaMonogame.WindowsDX/bin/
+Code/ZeldaMonogame.Android/bin/ 
+Code/ZeldaMonogame.WindowsUWP/bin/ 
+Code/ZeldaMonogame.Core/bin/ 
+Code/ZeldaMonogame.iOS/bin/ 
