création branche pour test chargement map + avancement chargement map + update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ Code/ZeldaMonogame.Core/bin/
 Code/ZeldaMonogame.iOS/bin/ 
 Code/ZeldaMonogame.Core/Content/obj/ 
 Code/ZeldaMonogame.Core/Content/bin/ 
+Code/TiledSharp/obj/ 
+Code/TiledSharp/bin/
