--- a/Code/ZeldaMonogame.Core/ZeldaMonogame.Core.csproj
+++ b/Code/ZeldaMonogame.Core/ZeldaMonogame.Core.csproj
@@ -8,12 +8,36 @@
     <None Remove="Content\obj\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Content\LightShadow_pipo.png" />
+    <None Remove="Content\LightShadow_pipo.tsx" />
     <None Remove="Content\Maps\GRASS+.png" />
     <None Remove="Content\Maps\Grass.tsx" />
     <None Remove="Content\Maps\Map_Test.tmx" />
+    <None Remove="Content\ogre_idle_anim_f0.png" />
+    <None Remove="Content\samplemap.tmx" />
     <None Remove="Content\ZeldaMonogame.mgcb" />
+    <None Remove="Content\[A]Dirt_pipo.png" />
+    <None Remove="Content\[A]Dirt_pipo.tsx" />
+    <None Remove="Content\[A]Flower_pipo.png" />
+    <None Remove="Content\[A]Flower_pipo.tsx" />
+    <None Remove="Content\[A]Grass_pipo.png" />
+    <None Remove="Content\[A]Grass_pipo.tsx" />
+    <None Remove="Content\[A]Wall-Up_pipo.png" />
+    <None Remove="Content\[A]Wall-Up_pipo.tsx" />
+    <None Remove="Content\[A]WaterFall_pipo.png" />
+    <None Remove="Content\[A]WaterFall_pipo.tsx" />
+    <None Remove="Content\[A]Water_pipo.png" />
+    <None Remove="Content\[A]Water_pipo.tsx" />
+    <None Remove="Content\[Base]BaseChip_pipo.png" />
+    <None Remove="Content\[Base]BaseChip_pipo.tsx" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\LightShadow_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\LightShadow_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\Maps\GRASS+.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -23,8 +47,59 @@
     <Content Include="Content\Maps\Map_Test.tmx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Content\ogre_idle_anim_f0.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\samplemap.tmx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Dirt_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Dirt_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Flower_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Flower_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Grass_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Grass_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Wall-Up_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Wall-Up_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]WaterFall_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]WaterFall_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Water_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[A]Water_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[Base]BaseChip_pipo.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\[Base]BaseChip_pipo.tsx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MonoGame.Extended" Version="3.8.0" />
+    <PackageReference Include="MonoGame.Extended.Content.Pipeline" Version="3.8.0" />
+    <PackageReference Include="MonoGame.Extended.Tiled" Version="3.8.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641">
       <PrivateAssets>All</PrivateAssets>
     </PackageReference>
