--- a/Code/ZeldaMonogame.Core/ZeldaMonogame.Core.csproj
+++ b/Code/ZeldaMonogame.Core/ZeldaMonogame.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Content\bin\**" />
@@ -20,5 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Game\Metier\Map\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MyoLib\MyoLib.csproj" />
+    <ProjectReference Include="..\MyoSharp\MyoSharp.csproj" />
   </ItemGroup>
 </Project>
